VivSoft_ACME_Phase2/MLOps/kubeflow-manifests/common/istio-1-9/kubeflow-istio-resources/base/kf-istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: public-cert
      mode: SIMPLE
